media/css/firefox/os/firefox-os-new.less
@import "../../sandstone/lib.less";

* {
    box-sizing: border-box;
}
#wrapper {
    background-color: #0C99D5;
    width: 100%;
    padding-bottom: 0;
}
h1 {
    background: transparent url(/media/img/firefox/os-new/fxos_wordmark.png) 0 0 no-repeat;
    margin: 0px auto 30px auto;
    width: 620px;
    height: 124px;
    span {
        .visually-hidden();
    }
}
h2 {
    .open-sans-light();
    font-size: 3rem;
}
main {
    margin: 0 auto;
    text-align: center;
    h2, h3 {
        color: white;
        text-shadow: none;
    }
    .tagline {
        .open-sans-light();
        color: #bee1f5;
        margin-bottom: 40px;
        font-size: 3em;
        letter-spacing: -0.01em;
    }
}
.content-wrapper {
    margin: 0 auto;
    width: 1400px;
}
/* Buttons */
.cta-button {
    display: inline-block;
    background-color: #005189;
    margin: 0 auto 80px;
    border: 0;
    border-radius: 6px;
    color: white;
    font-size: 1.4em;
    padding: .7em 3em;
    &:hover,
    &:focus,
    &:active {
        background-color: #005da5;
        color: white;
        text-decoration: none;
    }
}
.get-phone,
.get-newsletter {
    display: block;
    width: 13em;
    min-width: 13em;
    &.hidden {
        display: none;
    }
}
.fxos-hero-space {
    background: #0c99d5 url(/media/img/firefox/os-new/site-bg.png) 0 0 no-repeat;
    color: white;
    padding-top: 4em;
    height: 1250px;
    overflow: hidden;
    transition: height .5s;
    ul {
        margin: 0;
        padding: 0;
        list-style: none;
    }
}
/* class is added to fxos-hero-space when switching to demo mode */
.trim-height {
    height: 900px;
}
.phone {
    position: relative;
    top: 0;
    margin: 0 auto;
    opacity: 1;
    transition: all .7s;
}
.scale {
    position: absolute;
    top: -824px;
    left: 353px;
    transform: scale(.3, .3);
    opacity: 0;
}
.phone-container {
    position: relative;
    display: inline-block;
}
.try-homescreen {
    position: absolute;
    top: 320px;
    left: 210px;
    background: transparent url(/media/img/firefox/os-new/icons/arrows-vertical.png) 0 0 no-repeat;
    width: 134px;
    height: 134px;
}
.try-swipe {
    position: absolute;
    top: 390px;
    left: 950px;
    background: transparent url(/media/img/firefox/os-new/icons/arrows-horizontal.png) 0 0 no-repeat;
    width: 134px;
    height: 134px;
}
.throbber {
  position: absolute;
  top: 75px;
  left: 77px;
  display: inline-block;
  background-color: white;
  border-radius: 100px;
  width: 100px;
  height: 100px;
  opacity: 0;
  transform: scale(0, 0);

  animation-name: throb;
  animation-duration: 4s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}
.try-swipe .throbber {
    top: 75px;
    left: -43px;
}
.throb-one {
  animation-delay: 0;
}
.throb-two {
  animation-delay: 1s;
}
.throb-three {
  animation-delay: 2s;
}
.throb-four {
  animation-delay: 3s;
}
.demo {
    position: relative;
    width: 0;
    height: 0;
    opacity: 0;
    transition: opacity 3s;
    h2 {
        margin-bottom: 1em;
        font-size: 3.5em;
    }
    img {
        position: relative;
        left: 7px;
        z-index: 3;
    }
}
.demo,
.fxos-apps {
    ul,
    .app-group-selector {
        margin: 0;
        padding: 0;
        font-size: 1.5em;
        list-style: none;
        li {
            display: inline;
            margin-left: 0;
            &:first-child a {
                border: 2px solid #71c4ea;
                border-right: 0;
                border-radius: 6px 0 0 6px;
            }
            &:last-child a {
                border: 2px solid #71c4ea;
                border-left: 0;
                border-radius: 0 6px 6px 0;
            }
        }
        a {
            padding: .5em 1.5em;
        }
    }
    a {
        &:link,
        &:visited {
            display: inline-block;
            background-color: #005189;
            color: white;
            border: 2px solid #71c4ea;
        }
        &:hover,
        &:focus,
        &:active {
            background-color: #005da5;
            text-decoration: none;
        }
        &.close {
            position: absolute;
            top: -30px;
            right: 20px;
            background: transparent url(/media/img/firefox/os-new/icons/close.png) 0 0 no-repeat;
            border: 0;
            width: 42px;
            height: 42px;
            span {
                .visually-hidden();
            }
        }
        &.active-state {
            background-color: #e14164;
        }
    }
}
.active {
    width: 100%;
    height: 640px;
    opacity: 1;
}
.homescreen,
.screens-sprite {
    position: absolute;
    top: 145px;
    left: 567px;
    clip: rect(0, 277px, 498px, 0);
    width: 277px;
    height: 498px;
    z-index: 2;
}
.scroll-homescreen {
    display: none;
    .homescreen {
        background: transparent url(/media/img/firefox/os-new/homescreen.png) 0 0 no-repeat;
    }
}
.swipe-apps {
    display: none;
    img.wireframe-screens {
        position: absolute;
        top: 145px;
        left: 262px;
        z-index: 1;
    }
    .screens-sprite {
        background: transparent url(/media/img/firefox/os-new/screens-sprite.png) -310px 0 no-repeat;
    }
}
.fxos-features {
    background-color: white;
    padding: 80px 3em 100px;
    .clearfix();
    h2 {
        margin-bottom: 40px;
    }
    h3 {
        margin-top: 20px;
    }
    .feature {
        display: inline-block;
        width: 29%;
        margin: 0 5% 0 0;
        vertical-align: top;
        p {
            color: #999;
            font-size: 1.1em;
        }
    }
    :last-child.feature {
        margin: 0;
    }
}
.fxos-features,
.fxos-community {
    h2,
    h3 {
        color: #56565a;
    }
}
.fxos-apps,
.fxos-marketplace,
.fxos-help {
    background-color: #0c99d5;
    color: white;
    a:link,
    a:visited {
        color: white;
    }
}
.fxos-apps {
    padding: 80px 0 100px;
    h2,
    .app-group-selector {
        margin-bottom: 40px;
    }
}
.fxos-marketplace {
    h2 {
        margin-bottom: 30px;
    }
    p {
        color: #BEE1F5;
        margin-bottom: 60px;
        .open-sans-light();
        font-size: 2em;
    }
    li {
        display: inline-block;
        margin-left: 0;
        margin-right: 100px;
    }
    span {
        display: block;
        margin: 20px 0 60px;
        font-size: 1.2em;
    }
    .marketplace {
        display: inline-block;
        background: #005189 url(/media/img/firefox/os-new/icons/marketplace_glyph.png) 15px 9px no-repeat;
        color: white;
        margin: 0 auto 60px;
        padding: .7em 3em .7em 80px;
        border-radius: 6px;
        font-size: 1.4em;
    }
    .footnote {
        color: #bee1f5;
        .open-sans-italic();
        font-size: .9em;
    }
}
.fxos-news {
    background-color: #f2f2f2;
}
.fxos-community {
    background-color: white;
    color: #333;
    padding: 80px 0;
    p {
        color: #999;
        padding: 0 9em;
        .open-sans-light();
        font-size: 1.7em;
    }
    img {
        margin: 0 0 3em 0;
    }
}
.fxos-help {
    margin: 0 auto;
    padding: 3em 0;
    .clearfix();
    .help {
        display: inline-block;
        width: 400px;
        vertical-align: top;
    }
    .help:first-child {
        margin-left: 190px;
    }
    h3 {
        text-align: left;
    }
    ul {
        margin: 0;
        padding: 0;
        list-style: none;
        text-align: left;
        li {
            margin-left: 0;
            line-height: 2;
        }
    }
}
ul.apps {
    margin: 0 auto;
    width: 1100px;
    li {
        display: inline-block;
        margin: 0 0 40px 70px;
    }
}
.apps-marketplace {
    margin: 0 auto;
    width: 1100px;
    li {
        display: inline-block;
        margin: 0 20px 40px 60px;
    }
}

// email signup form no-JS styles
#email-form-content {
    h3 {
        .font-size(26px);
        line-height: 32px;
        text-shadow: none;
    }
    header {
        display: none;
    }
}

.footer-newsletter-form {
    width: @widthDesktop - (@gridGutterWidth * 4);
    margin: 0 auto @baseLine auto;
    background: #fff;
    border: 0;
    box-shadow: none;
    a {
        color: #47b8e4;
        text-decoration: underline;
    }
}

.newsletter-form.thank {
    border: none;
    box-shadow: none;
}

#footer-email-errors {
    width: @widthDesktop - (@gridGutterWidth * 2);
    margin: 0 auto;
}

// JS specific styles for signup and get phone modal content
.js {
    #signup-toggle-icon {
        position: fixed;
        top: (@baseLine + 80); // @baseLine below height of masthead
        right: @baseLine;
        z-index: 1000;
        width: 28px;
        height: 28px;
        background: url(/media/img/firefox/os/signup-slide-toggle.png) left top no-repeat;
        text-indent: 105%;
        white-space: nowrap;
        overflow: hidden;
        @transition: right, box-shadow linear 0.25s;
        .transition(@transition);
        &.form-open {
          right: 300px;
          background-position: left -28px;
        }
    }

    #signup-toggle-icon:hover,
    #signup-toggle-icon:focus {
        outline: none;
        .transition(box-shadow .5s linear);
        .box-shadow(0 0 20px 0px rgb(255,255,255));
    }

    #email-form-wrapper {
        display: none;
        width: 100%;
    }

    #email-form-content {
        header {
          display: block;
        }
    }

    .footer-newsletter-form {
        width: 100%;
        background: transparent;
        margin: 0 auto;
        #form-details, .form-details {
          display: block;
        }
        h3 {
          margin: 0 10px 10px 10px;
        }
        .error {
          border: 1px solid rgb(175,50,50);
        }
    }
}

.scroll-homescreen.animate {
    display: block;

    @keyframes scroll-homescreen {
        0% {
            background-position: 0 0;
        }
        50% {
            background-position: 0 -303px;
        }
        100% {
            background-position: 0 0;
        }
    }

    .homescreen {
        .animation(scroll-homescreen 5s ease 1s 1 normal forwards);
    }
}
.swipe-apps.animate {
    display: block;

    @keyframes swipe {
        15% {
            left: 262px;
        }
        40% {
            left: -50px;
        }
        65% {
            left: -357px;
        }
        70% {
            left: -50px;
        }
        75% {
            left: 262px;
        }
        90% {
            left: 571px;
        }
    }
    @keyframes swipe-screens {
        15% {
            background-position: -310px 0;
        }
        40% {
            background-position: -621px 0;
        }
        65% {
            background-position: -926px 0;
        }
        70% {
            background-position: -621px 0;
        }
        75% {
            background-position: -310px 0;
        }
        90% {
            background-position: 0 0;
        }
    }

    img.wireframe-screens {
        .animation(swipe 8s ease 1s 1 normal forwards);
    }
    .screens-sprite {
        .animation(swipe-screens 8s ease 1s 1 normal forwards);
    }
}

@keyframes throb {
  0% {
    transform: scale(.2, .2);
    opacity: .5;
  }
  25% {
    transform: scale(.5, .5);
    opacity: .5;
  }
  50% {
    transform: scale(1, 1);
    opacity: .3;
  }
  100% {
    transform: scale(1.5, 1.5);
    opacity: 0;
  }
}

